--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["admin", "api", "program", "server", "types"]
+members = ["server", "types"]
 
 [workspace.package]
 version = "1.6.1"
@@ -30,9 +30,8 @@ futures-channel = "0.3"
 futures-util = "0.3"
 log = "0.4"
 num_enum = "0.7.2"
-ore-api = "3.3.0"
+ore-api = "3.5.0"
 ore-boost-api = "3.0.1"
-ore-pool-api = { path = "api" }
 ore-pool-types = { path = "types" }
 postgres-types = "0.2.6"
 reqwest = { version = "0.12", features = ["json"] }
