--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["server", "types"]
+members = ["client", "server", "types"]
 
 [workspace.package]
 version = "1.6.1"
@@ -14,14 +14,9 @@ keywords = ["solana", "crypto", "mining"]
 
 [workspace.dependencies]
 actix-cors = "0.7"
-actix-web = "4.9"
-array-const-fn-init = "0.1.1"
-base64 = "0.22.1"
+actix-web = "4.10"
+actix-ws = "0.3"
 bincode = "1.3.3"
-bytemuck = "1.14.3"
-bytemuck_derive = "1.7.0"
-cached = "0.54.0"
-const-crypto = "0.1.0"
 deadpool-postgres = "0.12"
 drillx = { features = ["solana"], version = "2.2" }
 env_logger = "0.11"
@@ -34,6 +29,7 @@ ore-api = "3.5.0"
 ore-boost-api = "3.0.1"
 ore-pool-types = { path = "types" }
 postgres-types = "0.2.6"
+rand = "0.8.4"
 reqwest = { version = "0.12", features = ["json"] }
 serde = { features = ["derive"], version = "1.0" }
 serde_json = "1.0"
@@ -49,8 +45,8 @@ static_assertions = "1.1.0"
 steel = { features = ["spl"], version = "4.0" }
 thiserror = "1.0.57"
 tokio = "1.39"
-tokio-postgres = "0.7"
-rand = "0.8.5"
+tokio-tungstenite = "0.16"
+
 
 [patch.crates-io]
 
