--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -23,6 +23,7 @@ anyhow = "1.0"
 core_affinity = "0.8.1"
 drillx = "2.1.0"
 futures = "0.3.30"
+nix = "0.29.0"
 num_cpus = "1.16.0"
 ore-pool-types = { path = "../types" }
 rand.workspace = true
