--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ ore-boost-api = "3.0.1"
 ore-pool-types = { path = "types" }
 postgres-types = "0.2.6"
 rand = "0.8.4"
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 serde = { features = ["derive"], version = "1.0" }
 serde_json = "1.0"
 sha3 = "0.10"
